--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Forwardslash Development</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Forwardslash Development MERN application</h1>
+  </body>
 </html>
